--- a/src/app/transactions/certification/certificatf/certificatf.component.scss
+++ b/src/app/transactions/certification/certificatf/certificatf.component.scss
@@ -191,3 +191,24 @@ section{
   height: 28px;
   font-size: 12px;
 }
+
+
+//partie 2 du processus
+
+.overflow-scroll{
+  width: 50%;
+  height: 245px;
+}
+
+.rdc-visa{
+  margin-bottom: -45px;
+}
+
+.table{
+  font-size: 12px;
+}
+
+.card-header{
+  font-size: 14px;
+}
+
