--- a/src/app/transactions/certification/certificatf/dialog-visa/dialog-visa.component.html
+++ b/src/app/transactions/certification/certificatf/dialog-visa/dialog-visa.component.html
@@ -1,12 +1,9 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.3.5/signature_pad.min.js" 
-integrity="sha512-kw/nRM/BMR2XGArXnOoxKOO5VBHLdITAW00aG8qK4zBzcLVZ4nzg7/oYCaoiwc8U9zrnsO9UHqpyljJ8+iqYiQ=="
- crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-
-<h4 mat-dialog-title>Liste des membres de l'équipes</h4>
+<script src="src\assets\signaturepad.js"></script>
+<h4 mat-dialog-title>Membre de l'équipe d'enquête</h4>
 <div mat-dialog-content>
-    <div class="card" style="border: none;">
-        <form class="row g-3 mb-3">
+    <div class="card">
+    <div class="card  mx-3" style="border: none;">
+        <form class="row g-3">
             <div class="col-md-6">
                 <label for="inputlist" class="form-label">Nom et Prénom</label>
                 <input type="text" class="form-control form-control-sm" id="inputlist">
@@ -18,40 +15,21 @@ integrity="sha512-kw/nRM/BMR2XGArXnOoxKOO5VBHLdITAW00aG8qK4zBzcLVZ4nzg7/oYCaoiwc
                   <option *ngFor="let qualite of qualite" value="">{{qualite}}</option>
                 </select>
               </div>
-              <div class="col-md-12">
-                <script>
-                    var canvas = document.getElementById("signature-pad");
-
-                     function resizeCanvas() {
-                         var ratio = Math.max(window.devicePixelRatio || 1, 1);
-                         canvas.width = canvas.offsetWidth * ratio;
-                         canvas.height = canvas.offsetHeight * ratio;
-                         canvas.getContext("2d").scale(ratio, ratio);
-                     }
-                     window.onresize = resizeCanvas;
-                     resizeCanvas();
-
-                     var signaturePad = new SignaturePad(canvas, {
-                      backgroundColor: 'rgb(250,250,250)'
-                     });
-
-                     document.getElementById("clear").addEventListener('click', function(){
-                      signaturePad.clear();
-                     })
-                </script>
-                    <div class="wrapper">
-                        <canvas id="signature-pad"></canvas>
+              
+                 <div class="col-md-8" style="margin-bottom: 50px;">
+                    <signature-pad> </signature-pad>
+                    <div class="btns">
+                        <button class="btn btn-info">Refaire</button>
+                        <button class="btn btn-danger">Effacer</button>
+                        <button class="btn btn-success">Sauvegarder</button>
                     </div>
-                    <div class="clear-btn">
-                        <button id="clear"><span> Clear </span></button>
-                    </div>
-                 
-              </div>
+                </div>
         </form>
     </div>
 </div>
-
+</div>
+<!--
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="">Annuler</button>
   <button mat-button [mat-dialog-close]="" cdkFocusInitial>Enregistrer</button>
-</div>
+</div>-->
