--- a/src/app/transactions/certification/certificatf/dialog-visa/dialog-visa.component.scss
+++ b/src/app/transactions/certification/certificatf/dialog-visa/dialog-visa.component.scss
@@ -1,40 +1,50 @@
 
-* {
-    padding: 0;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+label{
+    font-size: 12px;
 }
-/*body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100vw;
-    background: #ececec;
-    overflow: hidden;
-}*/
-.flex-row {
-    display: flex;
-}
-.wrapper {
-    border: 1px solid #4b00ff;
-    border-right: 0;
-}
-canvas#signature-pad {
-    background: #fff;
-    width: 50%;
-    height: 50%;
+signature-pad{
+    background-color: white;
     cursor: crosshair;
-}
-button#clear {
+    width: 150%;
     height: 100%;
-    background: #4b00ff;
-    border: 1px solid transparent;
-    color: #fff;
-    font-weight: 400;
+    
+}
+
+.btns{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 0.5rem;
+    padding-top: 5px;
+    align-items: center;
+    margin-left: 50%;
+}
+.btns button{
+    
+    border: 1px solid #eef0f0;
+    border-radius: 4px;
+    box-shadow: rgba(237, 240, 240, 0.5) 0 2px 5px 0;
+    box-sizing: border-box;
+    color: #ffffff;
     cursor: pointer;
+    display: inline-block;
+    padding: 0 5px 0 6px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: middle;
+    margin: 0 10px;
+    
 }
-button#clear span {
-    transform: rotate(90deg);
-    display: block;
+
+.btn1{
+    background-color: rgb(61, 167, 243);
 }
+
+.btn3{
+    background-color: #30ae30;
+}
+
