--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -13,7 +13,7 @@
   
   .material-icons-outlined {
     vertical-align: middle;
-    line-height: 1px;
+    line-height: 0.063rem;
   }
   
   .text-primary {
@@ -45,7 +45,7 @@
   
   .grid-container {
     display: grid;
-    grid-template-columns: 260px 1fr 1fr 1fr;
+    grid-template-columns: 16.25rem 1fr 1fr 1fr;
     grid-template-rows: 0.2fr 3fr;
     grid-template-areas:
       "sidebar header header header"
@@ -58,12 +58,12 @@
   
   .header {
     grid-area: header;
-    height: 70px;
+    height: 4.375rem;
     background-color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 30px 0 30px;
+    padding: 0 1.875rem 0 1.875rem;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
   }
   
@@ -88,8 +88,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 20px 20px 20px;
-    margin-bottom: 30px;
+    padding: 1.25rem 1.25rem 1.25rem 1.25rem;
+    margin-bottom: 1.875rem;
   }
   
   .sidebar-title > span {
@@ -97,8 +97,8 @@
   }
   
   .sidebar-brand {
-    margin-top: 15px;
-    font-size: 20px;
+    margin-top: 0.938rem;
+    font-size: 1.25rem;
     font-weight: 700;
   }
   
@@ -109,7 +109,7 @@
   }
   
   .sidebar-list-item {
-    padding: 20px 20px 20px 20px;
+    padding: 1.25rem 1.25rem 1.25rem 1.25rem;
   }
   
   .sidebar-list-item:hover {
@@ -140,7 +140,7 @@
   .main-container {
     grid-area: main;
     overflow-y: auto;
-    padding: 20px 20px;
+    padding: 1.25rem 1.25rem;
     width: max-content;
   }
   
@@ -159,8 +159,8 @@
   .main-cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
-    margin: 20px 0;
+    gap: 1.25rem;
+    margin: 1.25rem 0;
   }
   
   .card {
@@ -213,16 +213,16 @@
   .charts {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 1.25rem;
   }
   
   .charts-card {
-    //margin-left: -15px;
+    
     background-color: #ffffff;
-    width: 38vw;
-    height: 46vh;
-    margin-bottom: 20px;
-    padding: 25px;
+    width: 36.5rem;
+    height: 22rem;
+    margin-bottom: 1.25rem;
+    padding: 1.6rem;
     box-sizing: border-box;
     -webkit-column-break-inside: avoid;
     border: 1px solid #d2d2d3;
@@ -242,26 +242,22 @@
     display: inline-block;
     position: relative;
     width: 100%;
-   // height: %;
   }
   
   .chart-size{
     display: flex;
     position: relative;
     width: 100%;
-    height: 35vh;
+    height: 12rem;
     justify-content: center;
     object-fit: cover !important;
   }
 
-  
- 
-  
   /* ---------- SCROLLBARS ---------- */
   
   ::-webkit-scrollbar {
-    width: 5px;
-    height: 6px;
+    width: 0.3125rem;
+    height: 0.375rem;
   }
   
   ::-webkit-scrollbar-track {
@@ -279,69 +275,63 @@
   }
   
   
-  /* ---------- MEDIA QUERIES ---------- */
-  
-  
-  /* Medium <= 992px */
-  @media screen and (max-width: 992px) {
-    .grid-container {
-      grid-template-columns: 1fr;
-      grid-template-rows: 0.2fr 3fr;
-      grid-template-areas:
-        "header"
-        "main";
-    }
-  
-    #sidebar {
-      display: none;
-    }
-  
-    .menu-icon {
-      display: inline;
-    }
-  
-    .sidebar-title > span {
-      display: inline;
-    }
+/* Styles pour les écrans de taille moyenne (<= 992px) */
+@media screen and (max-width: 992px) {
+  .page__box {
+      font-size: 1.5rem;
   }
-  
-  /* Small <= 768px */
- /* @media screen and (max-width: 768px) {
-    .main-cards {
+
+  .main-title select {
+      font-size: 1rem;
+  }
+
+  .main-cards, .charts {
       grid-template-columns: 1fr;
       gap: 10px;
-      margin-bottom: 0;
-    }
-  
-    .charts {
-      grid-template-columns: 1fr;
-      margin-top: 30px;
-    }
   }
-  
-  /* Extra Small <= 576px */
- /* @media screen and (max-width: 576px) {
-    .header-left {
-      display: none;
-    }
-  }*/
 
-  @media screen and (max-width: 768px) {
-    .main-cards, .charts {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-  
-    .card, .charts-card {
+  .card, .charts-card {
       width: 100%;
-      margin: 10px;
-    }
   }
-  
-  @media screen and (max-width: 480px) {
-    .card, .charts-card {
+}
+
+/* Styles pour les écrans de petite taille (<= 768px) */
+@media screen and (max-width: 768px) {
+  .page__box {
+      font-size: 1.2rem;
+  }
+
+  .main-title select {
+      font-size: 0.9rem;
+  }
+
+  .main-cards, .charts {
+      grid-template-columns: 1fr;
+      gap: 10px;
+  }
+
+  .card, .charts-card {
       width: 100%;
-    }
   }
+}
+
+/* Styles pour les écrans de très petite taille (<= 480px) */
+@media screen and (max-width: 480px) {
+  .page__box {
+      font-size: 1rem;
+  }
+
+  .main-title select {
+      font-size: 0.8rem;
+  }
+
+  .main-cards, .charts {
+      grid-template-columns: 1fr;
+      gap: 10px;
+  }
+
+  .card, .charts-card {
+      width: 100%;
+  }
+}
 
