--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,14 +3,14 @@
     padding: 0 1rem;
     background: #f1f5f9;
     &__box{
-        min-height: 120px;
+        min-height: 7.5rem;
         background: #30ae67;
         margin: 0 -1rem;
-        font-size: 24px;
+        font-size: 1.5rem;
     }
     &__content{
-        min-height: calc(100vh - 130px);
-        border-radius: 10px 10px 0 0;
+        min-height: calc(100vh - 8.125rem);
+        border-radius: 0.625rem 0.625rem 0 0;
         margin-top: -4rem;
         background: #f1f5f9;
         color: black;
