--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,3 +1,4 @@
+<!--
 <mat-nav-list>
     <div class="logo-py-4">
         <img src=" " alt="compagny Logo">
@@ -36,4 +37,44 @@
 
 
   
+</mat-nav-list>   -->
+
+
+<mat-nav-list>
+  <div class="logo-py-4">
+    <img src="chemin/vers/votre/image.jpg" alt="compagny Logo">
+  </div>
+  <mat-divider></mat-divider>
+  <h2 class="mt-2">SIFCI</h2>
+  <a mat-list-item routerLink="/dashboard" routerLinkActive="list-item-active" class="list">
+    <mat-icon>dashboard</mat-icon> TABLEAU DE BORD
+  </a>
+  <a mat-list-item routerLink="/recherche" routerLinkActive="list-item-active">
+    <mat-icon>search</mat-icon> Recherche
+  </a>
+
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title routerLink="/transactions" routerLinkActive="list-item-active">
+        <mat-icon>repeat</mat-icon> Transactions
+      </mat-panel-title>
+      <mat-panel-description></mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <a mat-list-item routerLink="/certification" routerLinkActive="list-item-active">Certification</a>
+    <a mat-list-item routerLink="/delimitation" routerLinkActive="list-item-active">Délimitation</a>
+    <a mat-list-item routerLink="/contratualisation" routerLinkActive="list-item-active">Contratualisation</a> 
+    <a mat-list-item routerLink="/consolidation" routerLinkActive="list-item-active">Consolidation</a> 
+  </mat-expansion-panel>
+
+  <a mat-list-item routerLink="/cartographie" routerLinkActive="list-item-active">
+    <mat-icon>map_pin_drop</mat-icon> Cartographie
+  </a>
+  <a mat-list-item routerLink="/statistiques" routerLinkActive="list-item-active">
+    <mat-icon>equalizer</mat-icon> Statistiques
+  </a>
+  <a mat-list-item routerLink="/administration" routerLinkActive="list-item-active">
+    <mat-icon>settings</mat-icon> Administration
+  </a> 
 </mat-nav-list>
+
